# alert-auto-inspector

./: .gitignore  README.md  pyproject.toml
doc/: example_request.sh  milestones.md  report_by_gemini.md  sample_message.json  test.md  to-do.md  webhook-input.md
scripts/: ingest_confluence.py
src/: main.py
src/adapters/ingestion/: __init__.py  base.py  datadog.py  test_ingestion.py  test_unified.py  unified.py
src/adapters/knowledge_base/: base.py  confluence.py  test_confluence.py
src/adapters/notification/: base.py  slack.py  test_notification.py
src/api/v1/: api.py
src/api/v1/endpoints/: webhook.py
src/chroma_db/: chroma.sqlite3
src/core/: config.py  llm.py  tools.py
src/models/: canonical.py  knowledge_base.py
src/scripts/: .env.example  ingest_confluence.py
src/services/: alert_service.py  graph_service.py  test_alert_service.py  test_graph_service.py  test_vector_db_service.py  vector_db_service.py
