[project]
name = "webhook-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "openai>=1.91.0",
    "python-dotenv>=0.21.0",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "pytest>=8.4.1",
    "chromadb>=1.0.15",
    "sentence-transformers>=2.7.0",
    "langgraph>=0.0.84",
    "atlassian-python-api>=4.0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
